fix(scroll): improve flicker on back navigation
It's still not perfect in Firefox for Android, but it's improved.

Partial fix for #753

--- a/scss/global.scss
+++ b/scss/global.scss
@@ -62,6 +62,7 @@ main {
   min-height: 70vh;
   @media (max-width: 767px) {
     margin: 5px auto 15px;
+    min-height: 100vh;
   }
 }
 
